--- a/Homepage.html
+++ b/Homepage.html
@@ -26,7 +26,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<script id="render-navbar" type="text/x-handlebars-template">
-		{{> navbar home="active" signin="true"}}
+		{{> navbar home="active" hide="true" signin="true"}}
 	</script></head>
 <body>
 	<div id="nav-placeholder"> </div>
