Edited from breakathon

--- a/CreateAccountConfirmation.html
+++ b/CreateAccountConfirmation.html
@@ -27,7 +27,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<script id="render-navbar" type="text/x-handlebars-template">
-		{{> navbar home="active" hide="true"}}
+		{{> navbar home="active" signin="true"}}
 	</script>
 
 	<script id="email-template" type="text/x-handlebars-template">
