--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>{{pageTitle}}</title>
+	<title>Haven - Log In or Sign Up</title>
 	<script
 	src="https://code.jquery.com/jquery-3.2.1.min.js"
 	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -15,6 +15,8 @@
 	crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="../scripts/render_nav.js"></script>
+	<script type="text/javascript" src="../scripts/hello.js"></script>
+	<script type="text/javascript" src="../scripts/home.js"> </script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
 	<link rel="stylesheet" 
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
@@ -24,15 +26,8 @@
 	<link rel="stylesheet" href="../stylesheets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-</head>
-<body>
-	<div id="nav-placeholder"> </div>
-	
-	{{{body}}}
 
-	<div id="footer">
-		<img src="../imgs/logo-full.png" id="logo-full"/>
-	</div>
+<body>
 
 </body>
 </html>
