--- a/BrowseTasks.html
+++ b/BrowseTasks.html
@@ -36,15 +36,20 @@
 	</script>
 
 	<script id="card-group" type="text/x-handlebars-template">
-		<h5> {{title}}
-			 	<i id={{listID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
-    	</h5>		
-		<div class="{{cardID}}">
+		<div style="margin-bottom: 5%; text-align: center">
+		<h2> Browse Tasks
+		</h2>
+			 	<i id={{listID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
+    		
+    	    	<hr class="mid-size-line" />
+
+    	</div>	
+		<div style="margin-bottom: 5%" class="{{cardID}}">
 			{{#each cards}}
 			<div class="card">
 				<div class="card-block">
 					<p class="card-id" style="display: none">{{cardID}}</p>
-					<h4 class="card-title">{{cardTitle}}</h4>
+					<h4 style="color: #33cccc;" class="card-title">{{cardTitle}}</h4>
 					<p class="card-text"> {{cardText}}</p>
 				</div>
 			</div>	
@@ -53,27 +58,29 @@
 	</script>
 
 	<script id="card-list" type="text/x-handlebars-template">
-		<h5> {{title}}  
-				<i id={{boxID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
-    	</h5>
+		<div style="margin-bottom: 5%; text-align: center">
+		<h2> Browse Tasks  </h2>
+    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
+    	<hr class="mid-size-line" />
+    	</div>
 		 
 		
-		<div class="{{cardID}}">
-			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="card-list">
+		<div style="margin-bottom: 5%" class="{{cardID}}">
+			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="hover card-list">
 				<thead>
 				<tr>
 						<th style="display: none"> </th>
-						<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Name </th>
-						<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Description 
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Name </th>
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Description 
 						</th>
 				</tr>
 				</thead>
 				<tbody>
 			{{#each cards}}
 				<tr>
-					<td style="display: none"> {{cardID}} </td>
-					<td style="border: 1px solid #dddddd;"> {{cardTitle}}</td>
-					<td style="border: 1px solid #dddddd;"> {{cardText}} </td>
+					<td style="margin-left: 1%; display: none"> {{cardID}} </td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardTitle}}</td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardText}} </td>
 				</tr>
 			{{/each}}
 				</tbody>
@@ -86,15 +93,11 @@
 <body>
 
 	<div id="nav-placeholder"> </div>
-	
-	<div class="vertical-align-25 center-text">
-		<h2 style="margin-bottom: 5%"> Browse Tasks</h2>
-		<hr class="mid-size-line" />
-	</div>
+
 
 	<div id="task-group" class="task-item-group"> </div>
 
-	<div id="footer-bigger">
+	<div id="footer">
 		<img src="../imgs/logo-full.png" id="logo-full"/>
 	</div>
 	
