--- a/BrowseTemplates.html
+++ b/BrowseTemplates.html
@@ -36,9 +36,11 @@
 	</script>
 
 	<script id="card-group" type="text/x-handlebars-template">
-		<h5> {{title}}
-			 	<i id={{listID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
-    	</h5>		
+		<div style="margin-bottom: 5%; text-align: center">
+			<h2> Browse Templates  </h2>
+    		<i id={{listID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
+    		<hr class="mid-size-line" />
+    	</div>
 		<div class="{{cardID}}">
 			{{#each cards}}
 			<div class="card">
@@ -52,13 +54,15 @@
 	</script>
 
 	<script id="card-list" type="text/x-handlebars-template">
-		<h5> {{title}}  
-				<i id={{boxID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
-    	</h5>
+		<div style="margin-bottom: 5%; text-align: center">
+		<h2> Browse Templates  </h2>
+    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
+    	<hr class="mid-size-line" />
+    	</div>
 		 
 		
 		<div class="{{cardID}}">
-			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="card-list">
+			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="hover card-list">
 				<thead>
 				<tr>
 						<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Name </th>
@@ -84,14 +88,9 @@
 
 	<div id="nav-placeholder"> </div>
 	
-	<div class="vertical-align-25 center-text">
-		<h2 style="margin-bottom: 5%"> Browse Templates</h2>
-		<hr class="mid-size-line" />
-	</div>
-
 	<div id="template-group" class="task-item-group"> </div>
 
-	<div id="footer-bigger">
+	<div id="footer">
 		<img src="../imgs/logo-full.png" id="logo-full"/>
 	</div>
 	
