--- a/TaskCreationHome.html
+++ b/TaskCreationHome.html
@@ -30,7 +30,7 @@
 	</script>
 
 	<script id="card-group" type="text/x-handlebars-template">
-		<h5 style="font-size: 1.7rem"> {{title}}
+		<h5> {{title}}
 			 <i id={{listID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
     	</h5>
 		
@@ -48,7 +48,7 @@
 	</script>
 
 	<script id="card-list" type="text/x-handlebars-template">
-		<h5 style="font-size: 1.7rem"> {{title}}  
+		<h5> {{title}}  
 				<i id={{boxID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
     	</h5>
 		 
@@ -83,8 +83,8 @@
 	<div id="nav-placeholder"> </div>
 	
 	<div class="vertical-align-25 center-text">
-		<h2 style="font-size: 2.5rem"> Let's get your task ready. </h2>
-		<button id="createNewTask" type="button" style="font-size: 1.7rem; margin-top: 1%" class="btn btn-primary btn-lg">Create New Task</button>
+		<h2> Let's get your task ready. </h2>
+		<button id="createNewTask" type="button" style="margin-top: 1%" class="btn btn-primary btn-lg">Create New Task</button>
 		<h5 style="margin-top: 2%"> or </h5>
 		<hr class="mid-size-line" />
 	</div>
