Added clickable icons

--- a/BrowseTasks.html
+++ b/BrowseTasks.html
@@ -39,7 +39,7 @@
 		<div style="margin-bottom: 5%; text-align: center">
 		<h2> Browse Tasks
 		</h2>
-			 	<i id={{listID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
+			 	<i id={{listID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="click-icon fa fa-list" aria-hidden="true"></i>
     		
     	    	<hr class="mid-size-line" />
 
@@ -60,7 +60,7 @@
 	<script id="card-list" type="text/x-handlebars-template">
 		<div style="margin-bottom: 5%; text-align: center">
 		<h2> Browse Tasks  </h2>
-    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
+    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="click-icon fa fa-th" aria-hidden="true"></i>
     	<hr class="mid-size-line" />
     	</div>
 		 
