--- a/BrowseTemplates.html
+++ b/BrowseTemplates.html
@@ -41,7 +41,7 @@
     		<button id="createNewTemplate" type="button" style="font-size: 1.7rem; margin-top: 1%" class="btn btn-primary btn-lg">Create </button>
     		<h5 style="margin-top: 2%"> or </h5>
 			<hr class="mid-size-line" />
-			<i id={{listID}} style="font-size: 2rem; margin-top: 1%;" class="fa fa-list" aria-hidden="true"></i>
+			<i id={{listID}} style="font-size: 2rem; margin-top: 1%;" class="click-icon fa fa-list" aria-hidden="true"></i>
     	</div>
 		<div class="{{cardID}}">
 			{{#each cards}}
@@ -62,7 +62,7 @@
     		<button id="createNewTemplate" type="button" style="font-size: 1.7rem; margin-top: 1%" class="btn btn-primary btn-lg">Create </button>
     		<h5 style="margin-top: 2%"> or </h5>
 			<hr class="mid-size-line" />
-    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%;" class="fa fa-th" aria-hidden="true"></i>
+    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%;" class="click-icon fa fa-th" aria-hidden="true"></i>
     	</div>
 		 
 		
