Add clickable icons

--- a/TaskCreationHome.html
+++ b/TaskCreationHome.html
@@ -31,7 +31,7 @@
 
 	<script id="card-group" type="text/x-handlebars-template">
 		<h5> {{title}}
-			 <i id={{listID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-list" aria-hidden="true"></i>
+			 <i id={{listID}} style="margin-top: 1%; margin-left: 1%" class="click-icon fa fa-list" aria-hidden="true"></i>
     	</h5>
 		
 		<div class="{{cardID}}">
@@ -84,7 +84,7 @@
 	
 	<div class="vertical-align-25 center-text">
 		<h2> Let's get your task ready. </h2>
-		<button id="createNewTask" type="button" style="margin-top: 1%" class="btn btn-primary btn-lg">Create New Task</button>
+		<button id="createNewTask" type="button" style="margin-top: 1%" class="click-icon btn btn-primary btn-lg">Create New Task</button>
 		<h5 style="margin-top: 2%"> or </h5>
 		<hr class="mid-size-line" />
 	</div>
