Added more icons

--- a/TaskCreationHome.html
+++ b/TaskCreationHome.html
@@ -49,7 +49,7 @@
 
 	<script id="card-list" type="text/x-handlebars-template">
 		<h5> {{title}}  
-				<i id={{boxID}} style="margin-top: 1%; margin-left: 1%" class="fa fa-th" aria-hidden="true"></i>
+				<i id={{boxID}} style="margin-top: 1%; margin-left: 1%" class="click-icon fa fa-th" aria-hidden="true"></i>
     	</h5>
 		 
 		
