--- a/TaskCreationHome.html
+++ b/TaskCreationHome.html
@@ -84,7 +84,7 @@
 	
 	<div class="vertical-align-25 center-text">
 		<h2> Let's get your task ready. </h2>
-		<button id="createNewTask" type="button" style="margin-top: 1%" class="click-icon btn btn-primary btn-lg">Create New Task</button>
+		<button id="createNewTask" type="button" style="margin-top: 1%" class="btn btn-primary btn-lg">Create New Task</button>
 		<h5 style="margin-top: 2%"> or </h5>
 		<hr class="mid-size-line" />
 	</div>
