Fixed bug with adding new templates

--- a/BrowseTasks.html
+++ b/BrowseTasks.html
@@ -44,7 +44,7 @@
     	    	<hr class="mid-size-line" />
 
     	</div>	
-		<div style="margin-bottom: 5%" class="{{cardID}}">
+		<div style="margin-left: 6%; margin-bottom: 5%" class="{{cardID}}">
 			{{#each cards}}
 			<div class="card">
 				<div class="card-block">
@@ -65,7 +65,7 @@
     	</div>
 		 
 		
-		<div style="margin-bottom: 5%" class="{{cardID}}">
+		<div style="margin-left: 6%; margin-bottom: 5%" class="{{cardID}}">
 			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="hover card-list">
 				<thead>
 				<tr>
@@ -95,7 +95,7 @@
 	<div id="nav-placeholder"> </div>
 
 
-	<div id="task-group" class="task-item-group"> </div>
+	<div style="margin-left: 14%" id="task-group" class="task-item-group"> </div>
 
 	<div id="footer">
 		<img src="../imgs/logo-full.png" id="logo-full"/>
