--- a/BrowseTemplates.html
+++ b/BrowseTemplates.html
@@ -95,7 +95,7 @@
 
 	<div id="nav-placeholder"> </div>
 	
-	<div id="template-group" class="task-item-group"> </div>
+	<div style="margin-left: 16%" id="template-group" class="task-item-group"> </div>
 
 	<div id="footer">
 		<img src="../imgs/logo-full.png" id="logo-full"/>
