--- a/BrowseTasks.html
+++ b/BrowseTasks.html
@@ -57,7 +57,7 @@
 
     	</div>	
 
-    	<h3 style="margin-left: 6%; margin-bottom: 2%"><span style="color:#33cccc">View</span> and <span style="color:#D33E20">Edit</span> Your Existing Tasks</h3>
+    	<h3 style="margin-left: 6%; margin-bottom: 2%"><span style="color:#33cccc">View</span>, <span style="color: #33cccc"> Edit</span>, and <span style="color:#D33E20">Delete</span> Your Existing Tasks</h3>
 
 		<div style="margin-left: 6%; margin-bottom: 5%" class="{{cardID}}">
 
@@ -82,7 +82,7 @@
 		 
 
 		<div style="margin-left: 6%; margin-bottom: 5%" class="{{cardID}}">
-				<h3><span style="color: #33cccc">View</span> and<span style="color: #D33E20"> Edit </span> Your Existing Tasks</h3>
+				<h3><span style="color: #33cccc">View</span>, <span style="color: #33cccc"> Edit</span>, and <span style="color: #D33E20"> Delete </span> Your Existing Tasks</h3>
 
 			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="hover card-list">
 				<thead>
@@ -98,6 +98,7 @@
 						</th>
 						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Description 
 						</th>
+						<th> </th>
 				</tr>
 				</thead>
 				<tbody>
@@ -109,6 +110,7 @@
 					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardTime}}</td>
 					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardLoc}}</td>
 					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardText}} </td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;"> <i style="font-size: 30px;" class="delete-button fa fa-trash"></i></td>
 				</tr>
 			{{/each}}
 				</tbody>
