--- a/BrowseVolunteers.html
+++ b/BrowseVolunteers.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Haven - Browse Templates</title>
+	<title>Haven - Browse Volunteers</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
@@ -23,67 +23,54 @@
 
 	<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css"/>
 	<script type="text/javascript" src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.3.1/js/dataTables.buttons.min.js"></script>
+	<script type="text/javascript" src="//cdn.datatables.net/buttons/1.3.1/js/buttons.flash.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	<script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/pdfmake.min.js"></script>
+	<script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/vfs_fonts.js"></script>
+	<script type="text/javascript" src="//cdn.datatables.net/buttons/1.3.1/js/buttons.html5.min.js"></script>
+	<script type="text/javascript" src="//cdn.datatables.net/buttons/1.3.1/js/buttons.print.min.js"></script>
 
 
-
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- 	<link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.3.1/css/buttons.dataTables.min.css">
+ -->	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 
 	<link rel="stylesheet" href="../stylesheets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-	<script type="text/javascript" src="../scripts/templates.js"></script>
+	<script type="text/javascript" src="../scripts/volunteers.js"></script>
 	<script type="text/javascript" src="../scripts/render_nav.js"></script>
 
 	<script id="render-navbar" type="text/x-handlebars-template">
-		{{> navbar template="active"}}
-	</script>
-
-	<script id="card-group" type="text/x-handlebars-template">
-		<div style="margin-bottom: 5%; text-align: center">
-			<h2> Browse Templates  </h2>
-    		<button id="createNewTemplate" type="button" style="font-size: 1.2rem; margin-top: 1%" class="btn btn-primary btn-lg">Create </button>
-    		<h5 style="margin-top: 2%"> or </h5>
-			<hr class="mid-size-line" />
-			<i id={{listID}} style="font-size: 2rem; margin-top: 1%;" class="click-icon fa fa-list" aria-hidden="true"></i>
-    	</div>
-
-    	    	<h3 style="margin-bottom: 2%"><span style="color: #33cccc"> View</span>, <span style="color: #33cccc"> Edit</span>, and <span style="color: #D33E20">Delete</span> Your Existing Templates</h3>
-
-
-		<div class="{{cardID}}">
-			{{#each cards}}
-			<div class="card">
-				<div class="card-block">
-					<p class="card-id" style="display: none">{{cardID}}</p>
-					<h4 class="card-title">{{cardTitle}}</h4>
-					<p class="card-text"> {{cardText}}</p>
-				</div>
-			</div>	
-			{{/each}}
-		</div>
+		{{> navbar task="active"}}
 	</script>
 
 	<script id="card-list" type="text/x-handlebars-template">
 		<div style="margin-bottom: 5%; text-align: center">
-		<h2> Browse Templates  </h2>
-    		<button id="createNewTemplate" type="button" style="font-size: 1.2rem; margin-top: 1%" class="btn btn-primary btn-lg">Create </button>
-    		<h5 style="margin-top: 2%"> or </h5>
-			<hr class="mid-size-line" />
-    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%;" class="click-icon fa fa-th" aria-hidden="true"></i>
+		<h2> Browse Volunteers  </h2>
+    	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%; margin-left: 1%" class="click-icon fa fa-th" aria-hidden="true"></i>
+    	<hr class="mid-size-line" />
     	</div>
 		 
-		<h3 style="margin-bottom: 2%"><span style="color: #33cccc">View </span>, <span style="color: #33cccc"> Edit</span>, and <span style="color:#D33E20">Delete</span> Your Existing Templates</h3>
 
-		<div class="{{cardID}}">
+		<div style="margin-left: 6%; margin-bottom: 5%" class="{{cardID}}">
+				<h3><span style="color: #33cccc">View</span>, <span style="color: #33cccc"> Edit</span>, and <span style="color: #D33E20"> Delete </span> Your Existing Tasks</h3>
+
 			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="hover card-list">
 				<thead>
 				<tr>
-						<th style="display: none"> </th>
-						<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Name </th>
-						<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Description 
+						<th style="display: none">ID </th>
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Name </th>
+
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Organization 
+						</th>
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Time 
+						</th>
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Location 
+						</th>
+						<th style="color: white; background-color: #33cccc; border: 1px solid #dddddd;">Description 
 						</th>
 						<th> </th>
 				</tr>
@@ -92,9 +79,12 @@
 			{{#each cards}}
 				<tr>
 					<td style="margin-left: 1%; display: none"> {{cardID}} </td>
-					<td style="border: 1px solid #dddddd;"> {{cardTitle}}</td>
-					<td style="border: 1px solid #dddddd;"> {{cardText}} </td>
-					<td style="border: 1px solid #dddddd;"> <i style="font-size: 30px;" class="delete-button fa fa-trash"></i></td>
+					<td style="border: 1px solid #dddddd;">{{cardTitle}}</td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardOrg}} </td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardTime}}</td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardLoc}}</td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;">{{cardText}} </td>
+					<td style="margin-left: 1%; border: 1px solid #dddddd;"> <i style="font-size: 30px;" class="delete-button fa fa-trash"></i></td>
 				</tr>
 			{{/each}}
 				</tbody>
@@ -107,8 +97,9 @@
 <body>
 
 	<div id="nav-placeholder"> </div>
-	
-	<div style="margin-left: 16%" id="template-group" class="task-item-group"> </div>
+
+
+	<div style="margin-left: 8%; width: 80%" id="task-group" class="task-item-group"> </div>
 
 	<div id="footer">
 		<img src="../imgs/logo-full.png" id="logo-full"/>
