--- a/Homepage.html
+++ b/Homepage.html
@@ -60,11 +60,11 @@
 			<form id="signup-form">
 				<div class="form-card">
 				<p> Pick the organization that you are a member of: </p>
-				<select style="font-size: 1.2rem; width: 100%; padding: 2%" id="org-select"> </select>
+				<select style="width: 100%; padding: 2%" id="org-select"> </select>
 
 				
 
-				<button style="font-size: 1rem; margin-top: 3%; text-align: center; width:100%" id="sign-up" class="btn-group-mem btn btn-primary btn-lg">Sign up  </button>
+				<button style="margin-top: 3%; text-align: center; width:100%" id="sign-up" class="btn-group-mem btn btn-primary btn-lg">Sign up  </button>
 
 				<hr class="mid-size-line"> 
 
