--- a/Homepage.html
+++ b/Homepage.html
@@ -52,7 +52,7 @@
 		<div style="margin-top: 10%;" class="col-sm-1 right-vertical-line"> </div>
 		<div style="margin-top: 10%;" class="col-sm-1"> </div>
 
-		<div style="margin-top: 5%" class="col-md-5">
+		<div style="margin-top: 3%" class="col-md-5">
 			<h2> Sign Up</h2>
 			<p> Join us in helping our communities </p>
 				
@@ -64,7 +64,7 @@
 
 				
 
-				<button style="margin-top: 3%; text-align: center; width:100%" id="sign-up" class="btn-group-mem btn btn-primary btn-lg">Sign up  </button>
+				<button style="font-size: 1rem; margin-top: 1%; text-align: center; width:100%" id="sign-up" class="btn-group-mem btn btn-primary btn-lg">Sign up  </button>
 
 				<hr class="mid-size-line"> 
 
@@ -89,7 +89,7 @@
 					<div style="margin-top: 1%" class="row">
 						<div class="col-md-6"> </div>
 						<div class="col-md-6">
-							<button style="text-align: center; float:right; width: 100%;" id="create-org"  class="btn btn-primary">Create Organization</button>
+							<button style="text-align: center; float:right; width: 100%;" id="create-org"  class="btn btn-primary">Create </button>
 						</div>
 					</div>
 			</form>
