--- a/BrowseTemplates.html
+++ b/BrowseTemplates.html
@@ -50,10 +50,10 @@
 			<i id={{listID}} style="font-size: 2rem; margin-top: 1%;" class="click-icon fa fa-list" aria-hidden="true"></i>
     	</div>
 
-    	    	<h3 style="margin-bottom: 2%"><span style="color: #33cccc"> View</span>, <span style="color: #33cccc"> Edit</span>, and <span style="color: #D33E20">Delete</span> Your Existing Templates</h3>
+    	    	<h3 style="margin-left: 6%; margin-bottom: 2%"><span style="color: #33cccc"> View</span>, <span style="color: #33cccc"> Edit</span>, and <span style="color: #D33E20">Delete</span> Your Existing Templates</h3>
 
 
-		<div class="{{cardID}}">
+		<div style="margin-left: 6%" class="{{cardID}}">
 			{{#each cards}}
 			<div class="card">
 				<div class="card-block">
@@ -75,9 +75,9 @@
     	<i id={{boxID}} style="font-size: 2rem; margin-top: 1%;" class="click-icon fa fa-th" aria-hidden="true"></i>
     	</div>
 		 
-		<h3 style="margin-bottom: 2%"><span style="color: #33cccc">View </span>, <span style="color: #33cccc"> Edit</span>, and <span style="color:#D33E20">Delete</span> Your Existing Templates</h3>
+		<h3 style="margin-left: 6%; margin-bottom: 2%"><span style="color: #33cccc">View </span>, <span style="color: #33cccc"> Edit</span>, and <span style="color:#D33E20">Delete</span> Your Existing Templates</h3>
 
-		<div class="{{cardID}}">
+		<div style="margin-left: 6%" class="{{cardID}}">
 			<table id="{{cardID}}" style="width: 100%; border-collapse: collapse;" class="hover card-list">
 				<thead>
 				<tr>
