--- a/BrowseTemplates.html
+++ b/BrowseTemplates.html
@@ -94,7 +94,7 @@
 					<td style="margin-left: 1%; display: none"> {{cardID}} </td>
 					<td style="border: 1px solid #dddddd;"> {{cardTitle}}</td>
 					<td style="border: 1px solid #dddddd;"> {{cardText}} </td>
-					<td style="border: 1px solid #dddddd;"> <i style="font-size: 30px;" class="delete-button fa fa-trash"></i></td>
+					<td style="text-align: center; border: 1px solid #dddddd;"> <i style="font-size: 30px;" class="delete-button fa fa-trash"></i></td>
 				</tr>
 			{{/each}}
 				</tbody>
